--- a/index.html
+++ b/index.html
@@ -8,32 +8,31 @@
      <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/ecc9200e8b.js" crossorigin="anonymous"></script>
      <!-- Google Font  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=REM:wght@200;300&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@700&family=Kalam:wght@300;400;700&family=Lobster&family=REM:wght@200;300&display=swap" rel="stylesheet">
 
 </head>
-<body>
-    <div id="heading"><h1><img class="headingDice" src="Images/headingDice.png" alt="dice image">REFRESH n ROLL<img class="headingDice" src="Images/headingDice.png" alt="dice image"></h1></div>
+<body >
+    <div id="heading"><h1>Refresh n Roll<img class="headingDice" src="Images/headingDice.png" alt="dice image"></h1></div>
 
     <p class="result" style="text-align: center;">LET's BEGIN</p>
+
     <div class="flex-container">
-    <div class="grid-container">
-        <div class="diceImgBox" id="dice1"><p class="playerNo">PLAYER 1</p><img src="Images/dice1.png" alt="1 on dice"></div>
+        <div class="grid-container">
+            <div class="diceImgBox" id="dice1"><p class="playerNo">PLAYER 1</p><img src="Images/dice1.png" alt="1 on dice"></div>
+         
+            <div class="diceImgBox" id="dice2"><p class="playerNo">PLAYER 2</p><img src="Images/dice6.png" alt="6 on dice"></div>
 
-        <div class="diceImgBox" id="dice2"><p class="playerNo">PLAYER 2</p><img src="Images/dice6.png" alt="6 on dice"></div>
+            <div class="reload">
+                <button class="Button refreshBtn" onclick="document.location.reload()">ROLL <i class="fa-solid fa-dice"></i></button>
 
-        <div class="reload">
-        <button class="Button refreshBtn" onclick="document.location.reload()">ROLL <i class="fa-solid fa-dice"></i></button>
+                <button class="Button resetBtn" onclick="reset()">RESET <i class="fa-solid fa-rotate " style="color: #ffffff;"></i></button>    
+            </div>
 
-        <button class="Button resetBtn" onclick="reset()">RESET <i class="fa-solid fa-rotate " style="color: #ffffff;"></i></button>
-        </div>
+        </div> 
+    </div>
 
-    </div> 
-
- 
-
- </div>
     <script src="index.js"></script>
 </body>
 </html>
