--- a/index.html
+++ b/index.html
@@ -35,4 +35,10 @@
 
     <script src="index.js"></script>
 </body>
+
+<footer>
+    <p style="text-align: center;">
+        © Gautam Arora | gautamarora07
+    </p>
+</footer>
 </html>
